# chirp3d

./: .editorconfig  .gitignore  CMakeLists.txt  readme.md  resources.cmake
.github/workflows/: android.yml  bsd.yml  ios.yml  linux-amd64.yml  linux-arm64.yml  linux-clang.yml  linux-gcc.yml  linux.yml  macos.yml  windows.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: assets.nest
android/app/src/main/java/com/kraxarn/chirp3d/: Chirp3dActivity.java
android/app/src/main/res/values/: strings.xml  styles.xml
docs/: requirements.md
example/: .gitignore  assets.nest  project.toml
example/assets/models/: blaster.glb  scene.blend  scene.glb
example/assets/textures/: dark.qoi  green.qoi  light.qoi  orange.qoi  purple.qoi  readme.txt  red.qoi
example/models/: bullet.blend  bullet.glb  cube.blend  cube.glb
example/scripts/: main.py
example/textures/: red.qoi
include/: appstate.h  args.h  array.h  assets.h  assetstream.h  audiodriver.h  camera.h  cast.h  cpuinfo.h  ecs.h  ecsosapi.h  font.h  gpu.h  gpudevicedriver.h  gpudriver.h  gpumesh.h  gpushaderformat.h  image.h  input.h  inputconfig.h  jphutils.h  json.h  logcategory.h  map.h  math.h  matrix.h  mesh.h  meshinfo.h  model.h  modules.h  mousebutton.h  nkui.h  path.h  physics.h  physicsconfig.h  pointlight.h  prefabs.h  py.h  resources.h  scriptengine.h  (+8 more)
include/ecs/: components.h  entities.h  events.h  tags.h
include/ui/: debugoverlay.h  renderer.h
resources/fonts/: monogram-bitmap.qoi  readme.txt
resources/shaders/: compile.sh
resources/shaders/dxil/: default.frag.dxil  default.vert.dxil  nkui.vert.dxil  simple.vert.dxil
resources/shaders/glsl/: default.frag  default.vert  nkui.frag  nkui.vert
resources/shaders/hlsl/: gouraud.vert.hlsl  simple.frag.hlsl  simple.vert.hlsl
resources/shaders/msl/: default.frag.msl  default.vert.msl  gouraud.vert.msl  nkui.frag.msl  nkui.vert.msl  simple.vert.msl
resources/shaders/spv/: default.frag.spv  default.vert.spv  gouraud.vert.spv  nkui.frag.spv  nkui.vert.spv  simple.vert.spv
resources/textures/: wall.qoi
scripts/: update_deps.py
shaders/: compile.sh
shaders/dxil/: gouraud.vert.dxil  simple.vert.dxil
shaders/glsl/: simple.vert.glsl
shaders/hlsl/: gouraud.vert.hlsl  simple.vert.hlsl
shaders/msl/: gouraud.vert.msl  simple.frag.msl  simple.vert.msl
shaders/spv/: gouraud.vert.spv  simple.vert.spv
src/: CMakeLists.txt  args.c  array.c  assethelper.c  assets.c  assetstream.c  audiodriver.c  camera.c  cpuinfo.c  degutil.c  ecs.c  ecsosapi.c  fileassets.c  folderassets.c  font.c  gpu.c  gpudevicedriver.c  gpudriver.c  gpumesh.c  gpushaderformat.c  image.c  input.c  jphutils.c  json.c  main.c  map.c  math.c  matrix.c  mesh.c  meshinfo.c  model.c  mousebutton.c  nkui.c  physics.c  physicsconfig.c  prefabs.c  resources.c  scriptengine.c  shader.c  shapes.c  (+4 more)
src/ecs/: CMakeLists.txt  assets.c  components.c  entities.c  events.c  gpudevice.c  imgui.c  input.c  models.c  nkui.c  physics.c  render.c  scriptengine.c  tags.c  window.c
src/modules/: ecs.c  math.c
src/py/: CMakeLists.txt  ecs.c  math.c
src/systems/: CMakeLists.txt  assets.c  gpudevice.c  imgui.c  physics.c  render.c  window.c
src/ui/: CMakeLists.txt  debugoverlay.c  demo.c  renderer.c
tests/: CMakeLists.txt  main.c  test_math.c  testarray.c
typings/: ecs.pyi  math.pyi
ui/: CMakeLists.txt  readme.md
ui/include/ui/: imgui.h
ui/src/: CMakeLists.txt  imgui.cpp  theme.cpp
