add_subdirectory(ui)

target_sources(${PROJECT_NAME} PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/assets.c
	${CMAKE_CURRENT_SOURCE_DIR}/audiodriver.c
	${CMAKE_CURRENT_SOURCE_DIR}/camera.c
	${CMAKE_CURRENT_SOURCE_DIR}/folderassets.c
	${CMAKE_CURRENT_SOURCE_DIR}/font.c
	${CMAKE_CURRENT_SOURCE_DIR}/gpu.c
	${CMAKE_CURRENT_SOURCE_DIR}/gpudevicedriver.c
	${CMAKE_CURRENT_SOURCE_DIR}/gpudriver.c
	${CMAKE_CURRENT_SOURCE_DIR}/gpushaderformat.c
	${CMAKE_CURRENT_SOURCE_DIR}/image.c
	${CMAKE_CURRENT_SOURCE_DIR}/input.c
	${CMAKE_CURRENT_SOURCE_DIR}/jphutils.c
	${CMAKE_CURRENT_SOURCE_DIR}/main.c
	${CMAKE_CURRENT_SOURCE_DIR}/math.c
	${CMAKE_CURRENT_SOURCE_DIR}/matrix.c
	${CMAKE_CURRENT_SOURCE_DIR}/mesh.c
	${CMAKE_CURRENT_SOURCE_DIR}/model.c
	${CMAKE_CURRENT_SOURCE_DIR}/physics.c
	${CMAKE_CURRENT_SOURCE_DIR}/physicsconfig.c
	${CMAKE_CURRENT_SOURCE_DIR}/shader.c
	${CMAKE_CURRENT_SOURCE_DIR}/shapes.c
	${CMAKE_CURRENT_SOURCE_DIR}/systeminfo.c
	${CMAKE_CURRENT_SOURCE_DIR}/vector.c
	${CMAKE_CURRENT_SOURCE_DIR}/videodriver.c
	${CMAKE_CURRENT_SOURCE_DIR}/windowconfig.c
)
